--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "@thencc/web3-wallet-handler",
-  "version": "0.0.1",
-  "description": "",
-  "license": "MIT",
-  "type": "module",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
-  "browser": {
-    ".": "dist/index.iife.js"
-  },
-  "files": [
-    "dist/*",
-    "LICENSE",
-    "README.md"
-  ],
-  "scripts": {
-    "build": "rimraf dist && tsup --config=tsup.config.ts"
-  },
-  "peerDependencies": {
-    "@thencc/inkey-client-js": "^0.0.1",
-    "algosdk": "^1.24.0"
-  },
-  "devDependencies": {
-    "rimraf": "^3.0.2",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.3"
-  }
+	"name": "@thencc/web3-wallet-handler",
+	"version": "0.0.1",
+	"description": "",
+	"license": "MIT",
+	"type": "module",
+	"main": "dist/index.cjs.js",
+	"module": "dist/index.esm.js",
+	"types": "dist/index.d.ts",
+	"browser": {
+		".": "dist/index.iife.js"
+	},
+	"files": [
+		"dist/*",
+		"LICENSE",
+		"README.md"
+	],
+	"scripts": {
+		"link-pnpm": "pnpm link --global",
+		"link-ic": "pnpm link @thencc/inkey-client-js --global",
+		"unlink-ic": "pnpm unlink @thencc/inkey-client-js",
+		"build": "tsup --config=tsup.config.ts"
+	},
+	"dependencies": {
+		"buffer": "^6.0.3",
+		"valtio": "^1.8.2"
+	},
+	"peerDependencies": {
+		"@thencc/inkey-client-js": "^0.0.1",
+		"algosdk": "^1.24.0"
+	},
+	"devDependencies": {
+		"tsup": "^6.5.0",
+		"typescript": "^4.9.3"
+	}
 }
