--- a/example-dapp/package.json
+++ b/example-dapp/package.json
@@ -7,21 +7,20 @@
 		"unlink-w3h": "pnpm unlink @thencc/web3-wallet-handler",
 		"link-algjs": "pnpm link @thencc/algonautjs --global",
 		"unlink-algjs": "pnpm unlink @thencc/algonautjs",
+		"link-ikc": "pnpm link @thencc/inkey-client-js --global",
+		"unlink-ikc": "pnpm unlink @thencc/inkey-client-js",
 		"dev": "vite --force",
 		"build": "vue-tsc && vite build",
 		"ppreview": "vite preview"
 	},
 	"dependencies": {
-		"@thencc/algonautjs": "^0.2.3",
-		"@thencc/web3-wallet-handler": "^0.0.2",
-		"@vue-reactivity/watch": "^0.2.0",
-		"@vue/reactivity": "^3.2.47",
+		"@thencc/algonautjs": "^0.2.4",
 		"vue": "^3.2.41"
 	},
 	"devDependencies": {
-		"@vitejs/plugin-vue": "^3.2.0",
+		"@vitejs/plugin-vue": "^4.0.0",
 		"typescript": "^4.6.4",
-		"vite": "^3.2.3",
-		"vue-tsc": "^1.0.11"
+		"vite": "^4.1.1",
+		"vue-tsc": "^1.0.24"
 	}
 }
