--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/web3-wallet-handler",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"description": "",
 	"license": "MIT",
 	"type": "module",
@@ -29,19 +29,20 @@
 	},
 	"dependencies": {
 		"@vue-reactivity/watch": "^0.2.0",
-		"@vue/reactivity": "^3.2.45"
+		"@vue/reactivity": "^3.2.45",
+		"@vue/shared": "^3.2.47"
 	},
 	"optionalDependencies": {
-		"@thencc/inkey-client-js": "^0.0.2",
 		"@perawallet/connect": "^1.1.0",
 		"@randlabs/myalgo-connect": "^1.4.2",
+		"@thencc/inkey-client-js": "^0.0.2",
 		"algosdk": "^1.24.1",
 		"buffer": "^6.0.3"
 	},
 	"devDependencies": {
-		"@thencc/inkey-client-js": "^0.0.2",
 		"@perawallet/connect": "^1.1.0",
 		"@randlabs/myalgo-connect": "^1.4.2",
+		"@thencc/inkey-client-js": "^0.0.2",
 		"tsup": "^6.5.0",
 		"typescript": "^4.9.3"
 	}
