--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"sourceMap": true,
 		"outDir": "dist",
 		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true,
 	}
 }
