--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
 	"name": "@thencc/web3-wallet-handler",
-	"version": "0.0.16",
+	"version": "0.0.18",
 	"description": "",
 	"license": "MIT",
 	"type": "module",
-	"module": "dist/index.esm.js",
-	"main": "dist/index.cjs.js",
+	"module": "dist/index.js",
+	"main": "dist/index.cjs",
 	"types": "dist/index.d.ts",
-	"browser": "dist/index.iife.js",
+	"browser": "dist/index.global.js",
 	"exports": {
 		".": {
-			"import": "./dist/index.esm.js",
-			"require": "./dist/index.cjs.js",
+			"import": "./dist/index.js",
+			"require": "./dist/index.cjs",
+			"default": "./dist/index.js",
 			"types": "./dist/index.d.ts"
-		},
-		"./buildSettings": {
-			"types": "./dist/buildSettings.d.ts",
-			"import": "./dist/buildSettings.js",
-			"require": "./dist/buildSettings.cjs",
-			"default": "./dist/buildSettings.global.js"
 		},
 		"./package.json": "./package.json"
 	},
@@ -32,7 +27,6 @@
 		"link-ic": "pnpm link @thencc/inkey-client-js --global",
 		"unlink-ic": "pnpm unlink @thencc/inkey-client-js",
 		"build": "tsup --config=tsup.config.ts",
-		"build:settings": "tsup --config=tsup-buildSettings.config.ts",
 		"publish:beta": "npm publish --access public --tag beta --greater-version-only",
 		"postinstall": "echo wearepostinstall"
 	},
