--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
 	"name": "@thencc/web3-wallet-handler",
-	"version": "0.0.76",
+	"version": "0.0.93",
 	"description": "",
 	"license": "MIT",
 	"type": "module",
 	"module": "dist/index.js",
 	"main": "dist/index.cjs",
 	"types": "dist/index.d.ts",
-	"browser": "dist/index.global.js",
 	"exports": {
 		".": {
 			"import": "./dist/index.js",
@@ -38,6 +37,7 @@
 		"@vue/shared": "^3.2.47"
 	},
 	"optionalDependencies": {
+		"@blockshake/defly-connect": "^1.1.1",
 		"@perawallet/connect": "^1.1.1",
 		"@randlabs/myalgo-connect": "^1.4.2",
 		"@thencc/inkey-client-js": "^0.0.2"
