--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,8 @@
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
 		"resolveJsonModule": true,
-	}
+	},
+	"include": [
+		"src"
+	]
 }
