--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/web3-wallet-handler",
-	"version": "0.0.149",
+	"version": "0.0.151",
 	"description": "",
 	"license": "MIT",
 	"type": "module",
@@ -27,8 +27,7 @@
 		"link-ic": "pnpm link @thencc/inkey-client-js --global",
 		"unlink-ic": "pnpm unlink @thencc/inkey-client-js",
 		"build": "tsup --config=tsup.config.ts",
-		"publish:beta": "npm publish --access public --tag beta --greater-version-only",
-		"postinstall": "echo wearepostinstall"
+		"publish:beta": "npm publish --access public --tag beta --greater-version-only"
 	},
 	"dependencies": {
 		"@vue-reactivity/watch": "^0.2.0",
@@ -39,7 +38,7 @@
 		"@blockshake/defly-connect": "^1.1.1",
 		"@perawallet/connect": "^1.1.1",
 		"@randlabs/myalgo-connect": "^1.4.2",
-		"@thencc/inkey-client-js": "^0.0.9",
+		"@thencc/inkey-client-js": "^0.0.10",
 		"buffer": "^6.0.3"
 	},
 	"peerDependencies": {
