--- a/example-dapp/package.json
+++ b/example-dapp/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"link-w3h": "pnpm link @thencc/web3-wallet-handler --global",
-		"unlink-w3h": "pnpm unlink @thencc/web3-wallet-handler",
+		"link-w3h": "pnpm link @thencc/any-wallet --global",
+		"unlink-w3h": "pnpm unlink @thencc/any-wallet",
 		"link-algjs": "pnpm link @thencc/algonautjs --global",
 		"unlink-algjs": "pnpm unlink @thencc/algonautjs",
 		"dev": "vite --force",
@@ -13,7 +13,7 @@
 	},
 	"dependencies": {
 		"@thencc/algonautjs": "^0.3.0",
-		"@thencc/web3-wallet-handler": "^0.0.164",
+		"@thencc/any-wallet": "^0.0.164",
 		"vue": "^3.2.41"
 	},
 	"devDependencies": {
