beginning of tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,12 @@
 		"outDir": "dist",
 		"moduleResolution": "node",
 		"allowSyntheticDefaultImports": true,
-		"resolveJsonModule": true,
+		"resolveJsonModule": true
 	},
+	"exclude": [
+		"**/*.spec.ts",
+		"**/*.test.ts",
+	],	
 	"include": [
 		"src"
 	]
