--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
 		"unlink-ic": "pnpm unlink @thencc/inkey-client-js",
 		"build": "tsup --config=tsup.config.ts",
 		"publish:beta": "npm publish --access public --tag beta --greater-version-only",
-		"publish:latest": "npm dist-tag add @thencc/any-wallet@0.1.79 latest "
+		"publish:latest": "npm dist-tag add @thencc/any-wallet@0.1.79 latest ",
+		"test:watch": "vitest",
+		"test:run": "vitest run",
+		"test:ui": "vitest --ui",
+		"test:coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@vue-reactivity/watch": "^0.2.0",
@@ -48,9 +52,12 @@
 	},
 	"devDependencies": {
 		"@thencc/inkey-types": "^0.0.10",
+		"@vitest/coverage-v8": "^0.32.0",
+		"@vitest/ui": "^0.32.0",
 		"algosdk": "^2.1.0",
 		"buffer": "^6.0.3",
 		"tsup": "^6.5.0",
-		"typescript": "^4.9.3"
+		"typescript": "^4.9.3",
+		"vitest": "^0.32.0"
 	}
 }
