--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/any-wallet",
-	"version": "0.1.85",
+	"version": "0.1.86",
 	"description": "",
 	"license": "MIT",
 	"type": "module",
@@ -9,8 +9,14 @@
 	"types": "dist/index.d.ts",
 	"exports": {
 		".": {
-			"import": "./dist/index.js",
-			"require": "./dist/index.cjs",
+			"import": {
+				"types": "./dist/index.d.ts",
+				"default": "./dist/index.js"
+			},
+			"require": {
+				"types": "./dist/index.d.cts",
+				"default": "./dist/index.cjs"
+			},
 			"default": "./dist/index.js",
 			"types": "./dist/index.d.ts"
 		},
@@ -59,5 +65,6 @@
 		"tsup": "^7.1.0",
 		"typescript": "^5.1.3",
 		"vitest": "^0.32.2"
-	}
+	},
+	"packageManager": "^pnpm@8.3.1"
 }
