--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/any-wallet",
-	"version": "0.1.87",
+	"version": "0.1.88",
 	"description": "",
 	"license": "MIT",
 	"type": "module",
@@ -44,7 +44,9 @@
 	"dependencies": {
 		"@vue-reactivity/watch": "^0.2.0",
 		"@vue/reactivity": "^3.3.4",
-		"@vue/shared": "^3.3.4"
+		"@vue/shared": "^3.3.4",
+		"mobx": "^6.10.0",
+		"mobx-persist-store": "^1.1.3"
 	},
 	"optionalDependencies": {
 		"@blockshake/defly-connect": "^1.1.5",
