--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
 		"@vue/reactivity": "^3.3.4",
 		"@vue/shared": "^3.3.4",
 		"mobx": "^6.10.0",
-		"mobx-persist-store": "^1.1.3"
+		"mobx-persist-store": "^1.1.3",
+		"mobx-utils": "^6.0.8"
 	},
 	"optionalDependencies": {
 		"@blockshake/defly-connect": "^1.1.5",
