--- a/example-dapp/package.json
+++ b/example-dapp/package.json
@@ -12,14 +12,15 @@
 		"site-preview": "vite preview"
 	},
 	"dependencies": {
-		"@thencc/algonautjs": "^0.3.65",
-		"@thencc/any-wallet": "^0.2.1",
+		"@thencc/algonautjs": "^0.3.70",
+		"@thencc/any-wallet": "^0.2.5",
+		"algosdk": "^2.5.0",
 		"vue": "^3.3.4"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^4.2.3",
 		"typescript": "^5.1.3",
-		"vite": "^4.3.9",
+		"vite": "^4.4.9",
 		"vue-tsc": "^1.8.1"
 	}
 }
