--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/any-wallet",
-	"version": "0.2.6",
+	"version": "0.2.7",
 	"description": "",
 	"license": "MIT",
 	"type": "module",
@@ -43,8 +43,7 @@
 	},
 	"dependencies": {
 		"mobx": "^6.10.2",
-		"mobx-persist-store": "^1.1.3",
-		"mobx-utils": "^6.0.8"
+		"mobx-persist-store": "^1.1.3"
 	},
 	"optionalDependencies": {
 		"@blockshake/defly-connect": "^1.1.6",
