--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@thencc/any-wallet",
-	"version": "0.2.9",
+	"version": "0.2.10",
 	"description": "",
 	"license": "MIT",
 	"type": "module",
@@ -28,6 +28,11 @@
 		"README.md",
 		"!.DS_Store"
 	],
+	"packageManager": "^pnpm@8.3.1",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/thencc/any-wallet"
+	},
 	"scripts": {
 		"link": "pnpm link --global",
 		"unlink": "pnpm -g rm @thencc/any-wallet",
@@ -35,7 +40,7 @@
 		"unlink-ic": "pnpm unlink @thencc/inkey-client-js",
 		"build": "tsup --config=tsup.config.ts",
 		"publish:beta": "npm publish --access public --tag beta --greater-version-only",
-		"publish:latest": "npm dist-tag add @thencc/any-wallet@0.2.9 latest",
+		"publish:latest": "npm dist-tag add @thencc/any-wallet@0.2.10 latest",
 		"test:watch": "vitest",
 		"test:run": "vitest run",
 		"test:ui": "vitest --ui",
@@ -64,6 +69,5 @@
 		"tsup": "^7.2.0",
 		"typescript": "^5.2.2",
 		"vitest": "^0.34.4"
-	},
-	"packageManager": "^pnpm@8.3.1"
+	}
 }
