--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@thencc/any-wallet",
 	"version": "0.2.10",
-	"description": "",
+	"description": "a wallet connection handler for web3 dapps",
 	"license": "MIT",
 	"type": "module",
 	"module": "dist/index.js",
